<resources>
    <string name="app_name">Spoonacular-Browser</string>
    <string name="result_activity_title">Results</string>
    <string name="recipe_title">Simple Frieds Eggs</string>
    <string name="recipeStyle">Recipe Type</string>
    <string name="recipeImageContentDescription">This is the default recipe image. Miam, that\'s looking good !</string>
    <string name="recipeTextSimple">This is a simple recipe !</string>
    <string name="numberOfResultsText">Number of results</string>
    <string name="search_input_hint" >Search</string>
    <string name="Time">25</string>
    <string name="description">Recipe Description</string>
    <string name="searchButton">Search</string>
    <string name="valueOfseekBar">10</string>
    <string name="info_no_ingredients">No ingredients</string>
    <string name="info_source_url">Source url: %s</string>
    <string name="info_img_url">IMG url: %s</string>
    <string name="info_id">Id: %d</string>
    <string name="info_ready_minutes">Ready in minutes: %d</string>
    <string name="info_credits">Credits: %s</string>
    <string name="info_score">Spoonacular Score: %.2f</string>
    <string name="info_gluten_free">Is gluten free: %b</string>
    <string name="info_vegan">Is vegan: %b</string>
    <string name="info_vegetarian">Is vegetarian: %b</string>
    <string name="info_cheap">Is cheap: %b</string>
    <string name="info_aggr_likes">Aggregate likes: %d</string>
    <string name="info_price_serving">Price per serving: %.2f</string>
    <string name="info_dish_type">Dish types: %s</string>
    <string name="tab_title_info">Information</string>
    <string name="tab_title_ingredients">Ingredients</string>
    <string name="tab_title_steps">Steps</string>
    <string name="info_no_instructions">No instructions available</string>
    <string name="limit_license">Limit license</string>
    <string name="instructions_required">Instructions required</string>
    <string name="search_diet">Diet</string>
    <string name="exclude_ingredients">Type here ingredients to exclude</string>
    <string name="intolerances">Type here your intolerances</string>
    <string name="clipboard">Copied to clip board</string>
</resources>
