<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/overviewImageView"
        android:layout_width="87dp"
        android:layout_height="79dp"
        android:contentDescription="@string/recipeImageContentDescription"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/titletextView"
        android:layout_width="260dp"
        android:layout_height="80dp"
        android:maxLines="1"
        android:minLines="1"
        android:singleLine="true"
        android:text="@string/description"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/Time"
        android:textAlignment="center" />
</LinearLayout>
