<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/namepage"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/nameRecipe"
        android:layout_width="222dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/search_input_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namepage" />

    <Spinner
        android:id="@+id/genre"
        android:layout_width="234dp"
        android:layout_height="21dp"
        android:layout_marginTop="72dp"
        android:entries="@array/cuisine_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toEndOf="@+id/recipeStyleTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameRecipe" />

    <TextView
        android:id="@+id/recipeStyleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:text="@string/recipeStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameRecipe" />

    <SeekBar
        android:id="@+id/numberRecipe"
        android:layout_width="180dp"
        android:layout_height="21dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toEndOf="@+id/numberOfResultsTextView"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <TextView
        android:id="@+id/numberOfResultsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:text="@string/numberOfResultsText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeStyleTextView" />

    <Button
        android:id="@+id/seearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberRecipe"
        app:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/valueOfSeekBar"
        android:layout_width="57dp"
        android:layout_height="22dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="48dp"
        android:text="@string/valueOfseekBar"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberRecipe"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

</androidx.constraintlayout.widget.ConstraintLayout>